<resources>
    <string name="app_name">Foundation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confrim_password">Confrim Password</string>
    <string name="confrim">Confrim</string>
    <string name="register">Register</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_table">TableActivity</string>
    <string name="ownPosts">Посты Пользователя</string>
    <integer name="com_vk_sdk_AppId">51669815</integer>
</resources>