<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.registration.registered">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?colorSecondary">

        <ImageButton
            android:id="@+id/goToLogin"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:rotation="45"
            android:background="?colorSecondary"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="314dp"
            android:layout_height="400dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="45dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="3dp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_book" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/app_name"
                        android:textColor="?colorPrimary"
                        android:textSize="36sp" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLength="60"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:color="?colorError"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pass"
                        android:textColorHint="?colorError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="12"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confrim_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/confrim_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/conpass"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLength="12"/>
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/with_vk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Войти через VK ID"
                        android:background="#FFFFFF"
                        android:textSize="24sp"/>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/confrim"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/confrim"
                        android:textSize="24sp" />
                </LinearLayout>
            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>